@@ -16,6 +16,8 @@
 
 	* mpn/generic/mulmod_bnm1.c (mpn_mulmod_bnm1_next_size): fix typo
 
+	* mpn/generic/toom33_mul.c: Use rsblsh1 for evaluation.
+
 2009-11-14  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/generic/toom52_mul.c: Use mpn_addlsh1_n.
